projects now behave like project feature in terms of displaying embedded video at native resolutions, fix for navbar-scroll while collapse is shown

--- a/src/app.scss
+++ b/src/app.scss
@@ -187,8 +187,6 @@ NAVBAR
 }
 
 
-
-
 /*********************************************************************
 SLIDER
 *********************************************************************/
@@ -663,8 +661,8 @@ PROJECTS
   background: #fff;
 }
 .project {
-  // border: 1px solid deeppink;
-  position: relative;
+  border: 1px solid deeppink;
+  display: block;
   width: 280px;
   height: 200px;
   min-height: 200px;
@@ -683,7 +681,7 @@ PROJECTS
 
   &:nth-child(1) {
     .project__bg {
-      background-image: url('./imgs/proj.png');
+      background-image: url('./imgs/proj4.png');
     }
   }
   &:nth-child(2) {
@@ -698,16 +696,22 @@ PROJECTS
   }
   &:nth-child(4) {
     .project__bg {
-      background-image: url('./imgs/proj4.png');
+      background-image: url('./imgs/proj.png');
     }
   }
 
   &__content {
+    display: block;
+    margin: 0px auto;
+    text-align: center;
+    border: 1px solid blue;
     position: relative;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 6;
+
   }
    &-feature {
     margin: 4px 0px;
